Open-MX 1.0.902 aka 1.1-rc2
========================================================

Changes:
* The OMX_IFACES variable in open-mx.conf replaces the old IFACES.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.0.901 aka 1.1-rc1 (March 13th 2009, svn r2466)
========================================================
The improved non-MX-wire-compatibility release.

Major improvements from previous release:
* Improve non-MX-wire-compatible medium and large message performance
  by using full MTU packets in most cases instead of a power-of-two
  payload size.
  + Open-MX 1.1.x is not wire compatible with earlier releases if
    MX wire compatibility is disabled.
* Disable MX-wire-compatibility by default, configure for MTU=9000.
* Add support for architectures with page size different from 4kB.

Other improvements:
* Add a new optional medium send path relying on page pinning and
  fragmented DMAs instead of page copy and large contigous socket
  buffers.
* Add an optional kernel-based memory pinning cache invalidation
  support through MMU-notifier (starting with Linux kernel 2.6.27),
  enable OMX_RCACHE by default when supported.
* Add udev support by installing a rules file in omx_local_install
  and not overriding udev work when the environment looks sane.
* The loopback interface hostname is now automatically set to
  'localhost'.
* Add manpages for tools programs.
* Add the ability to iprobe/probe across multiple context ids.
* Miscellaneous small improvements and cleanups all over the place.

Open-MX 1.0.5 (January 29th 2009, svn/open-mx-1.0.x r2301)
==========================================================
The OpenMPI 1.3 release.

Bug fixes:
* Extend the MX ABI compatibility with some internal symbols that
  OpenMPI requires.

Open-MX 1.0.4 (January 9th 2009, svn/open-mx-1.0.x r2244)
=========================================================
Bug fixes: