@@ -3,6 +3,8 @@ Open-MX 1.0.902 aka 1.1-rc2
 
 Changes:
 * The OMX_IFACES variable in open-mx.conf replaces the old IFACES.
+* make install does not build anymore, make should be invoked first.
+
 
 Caveats:
 * No background progression or retransmission is done if the application
